--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.1.4
+  http: ^0.13.4
+  json_annotation: ^2.3.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -33,6 +36,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
+
 
 
 # For information on the generic Dart part of this file, see the
